Tracing: re-use JSONTraceDataSink in DevTools' tracing handler...

... so that we return traces from all agents and metadata to clients.

This depens on https://codereview.chromium.org/2160793003/
on the Telemetry side.

BUG=599932

Review-Url: https://codereview.chromium.org/2161583004
Cr-Commit-Position: refs/heads/master@{#408988}

Former-commit-id: 4ca7f52df3354ba8ebb672c63b853cb23d737227