content/browser/devtools/devtools_io_context.cc
@@ -62,9 +62,10 @@ void Stream::Read(off_t position, size_t max_size, ReadCallback callback) {
                  callback));
 }
 
-void Stream::Append(const scoped_refptr<base::RefCountedString>& data) {
+void Stream::Append(std::unique_ptr<std::string> data) {
   BrowserThread::PostTask(BrowserThread::FILE, FROM_HERE,
-      base::Bind(&Stream::AppendOnFileThread, this, data));
+                          base::Bind(&Stream::AppendOnFileThread, this,
+                                     base::Passed(std::move(data))));
 }
 
 void Stream::ReadOnFileThread(off_t position, size_t max_size,
@@ -101,14 +102,12 @@ void Stream::ReadOnFileThread(off_t position, size_t max_size,
                           base::Bind(callback, data, status));
 }
 
-void Stream::AppendOnFileThread(
-    const scoped_refptr<base::RefCountedString>& data) {
+void Stream::AppendOnFileThread(std::unique_ptr<std::string> data) {
   DCHECK_CURRENTLY_ON(BrowserThread::FILE);
   if (!InitOnFileThreadIfNeeded())
     return;
-  const std::string& buffer = data->data();
-  int size_written = file_.WriteAtCurrentPos(&*buffer.begin(), buffer.size());
-  if (size_written != static_cast<int>(buffer.size())) {
+  int size_written = file_.WriteAtCurrentPos(data->data(), data->size());
+  if (size_written != static_cast<int>(data->size())) {
     LOG(ERROR) << "Failed to write temporary file";
     had_errors_ = true;
     file_.Close();
